# eidetic-cli

./: .flake8  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.devague/: current  current_plan
.devague/frames/: eidetic-cli-now-remembers-like-a-mind-a-one-shot-m.json  eidetic-cli-s-default-memory-store-becomes-project.json  eidetic-cli-s-remember-recall-skill-wrappers-are-h.json  eidetic-cli-ships-its-memory-surface-remember-inge.json  eidetic-cli-stops-touching-files-migrate-store-now.json  eidetic-overview-now-reports-live-store-numbers-re.json  eidetic-recall-now-searches-four-ways-exact-approx.json  eidetic-records-now-carry-first-class-agent-attrib.json  eidetic-s-memory-store-is-now-fully-repo-contained.json
.devague/plans/: eidetic-cli-now-remembers-like-a-mind-a-one-shot-m.json  eidetic-cli-s-default-memory-store-becomes-project.json  (+2 more)
.github/workflows/: publish.yml  tests.yml
docs/: skill-sources.md
eidetic/: __init__.py  __main__.py
tests/: conftest.py  test_added_by_e2e.py  test_added_by_roundtrip.py  test_backend.py  test_backend_multi_store.py  test_boundaries.py  test_cli.py  test_cli_introspection.py  test_cli_verbs_registered.py  test_e2e_memory.py  test_embed.py  test_files_backend.py  test_lifecycle.py  test_migrate_qq.py  test_migrate_store.py  test_mongo_backend.py  test_neo4j_backend.py  test_overview_store.py  test_recall.py  test_recall_lifecycle.py  test_record.py  test_record_schema.py  test_remember.py  test_scope.py  test_scope_isolation.py  test_scoring.py  test_shared_store.py  test_signal_strength.py  test_stats.py  test_store_resolver.py  test_store_routing_e2e.py  test_sweep.py
(+49 files in other folders)
